# 40k-Tokenizer

./: Eisenhorn.txt  README.md  app.py  bpe.py  main.py  merges.npy  pyproject.toml  train.py  vocab.npy
templates/: index.html
